# numeris-rs

./: .gitignore  Cargo.toml  README.md  coverage.sh
numeris/: Cargo.toml
numeris-cli/: Cargo.toml
numeris/src/: itor.rs  lib.rs  rtoi.rs
src/: itor.rs  lib.rs  rtoi.rs
