[package]
name = "numeris"
description = "Simple library for converting between integers and Roman numerals"
version = "0.3.0"
authors = ["Eric McIntyre <mac@riversoforion.com>"]
edition = "2018"
keywords = ["roman_numerals", "conversion"]
categories = ["command-line-utilities", "value-formatting"]

[dependencies]
clap = "~2.33.0"
ansi_term = "~0.12.0"
itertools = "~0.9.0"
lazy_static = "~1.4.0"
regex = "~1.4.0"
